# tim_semantik_web

./: .env  .gitignore  Data Penelitian.owx  README.md  Untitled.ipynb  aaaaaaaaaaa.ofn  app.py  data_penelitian.owx  data_penelitian.rdf  ddaa.tex  dddddd.rdf  graph.dot  konversi_abstrak_openai.ipynb  konversi_abstrak_rdflib.ipynb  konversi_data_sample_yeni.ipynb  pyproject.toml  true.ttl  true.xml  ttttt.ttl
raw-data/: 2018_penelitian.csv  2019_penelitian.csv  2020_penelitian.csv  2021_penelitian.csv  2022_penelitian.csv  2023_penelitian.csv  20241017_103924_a_piece_of_cake.csv  20241017_104215_a_piece_of_cake.csv  20241017_104308_a_piece_of_cake.csv  a_piece_of_cake.csv  author_unique_20241205_150133_all_data_penelitian1.csv  author_unique_20241205_150526_all_data_penelitian1.csv  author_unique_20241205_152140_all_data_penelitian1.csv  author_unique_20241205_170539_all_data_penelitian1.csv  author_unique_20241205_171945_all_data_penelitian1.csv  author_unique_20241216_225457_all_data_penelitian1.csv  author_unique_20241216_230105_all_data_penelitian1.csv  author_unique_20241216_230702_all_data_penelitian1.csv  author_unique_20241217_012434_all_data_penelitian1.csv  author_unique_20241217_145111_all_data_penelitian1.csv  author_unique_20241217_150159_all_data_penelitian1.csv  author_unique_20241217_150850_all_data_penelitian1.csv  author_unique_20241217_151325_all_data_penelitian1.csv  author_unique_20241217_155121_all_data_penelitian1.csv  author_unique_20241217_160330_all_data_penelitian1.csv  author_unique_20241217_160334_all_data_penelitian1.csv
